<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

<item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always|withText"
        android:orderInCategory="105"
        />

    <item android:id="@+id/action_edit_task"
        android:title="@string/action_edit_task"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always|withText"
        android:orderInCategory="100"
        />

    <item android:id="@+id/action_delete_task"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always|withText"
        android:orderInCategory="101"
        />
</menu>
