<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/spacing_large"
    android:paddingRight="@dimen/spacing_large"
    android:paddingBottom="@dimen/spacing_large">
    <TextView
        android:id="@+id/view_task_title"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:paddingTop="@dimen/spacing_large"
        android:layout_height="wrap_content"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/view_task_description"
        android:layout_below="@+id/view_task_title"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:paddingBottom="@dimen/spacing_small"
        android:paddingTop="@dimen/spacing_small"/>

    <TextView
        android:id="@+id/view_task_elapsed_time"
        android:layout_below="@+id/view_task_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="35dp" />
    <Button
        android:layout_below="@+id/view_task_elapsed_time"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_start"
        android:onClick="buttonsClick"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/inBtn" />

    <Button
        android:layout_below="@+id/inBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="buttonsClick"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/btn_pause"
        android:id="@+id/outBtn" />

    <Button
        android:layout_below="@+id/outBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="buttonsClick"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/btn_stop"
        android:id="@+id/stopBtn" />
</RelativeLayout>